# zbbvrui

./: .gitignore  README.md  angular.json  bun.lockb  estaTektonPipeline.yaml  package.json
.github/workflows/: build.yml
crates/: Cargo.toml
crates/tauri_app/: Cargo.toml  tauri.conf.json
crates/tauri_app/src/: adb.rs  communication.rs  main.rs  structs.rs  util.rs
crates/window_manager/src/: lib.rs  windows.rs
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/scrcpy/: docs.txt
src-tauri/src/: main.rs  scrcpy.rs  structs.rs
src/app/: app.component.css  app.component.html  app.component.ts  device.service.ts  notification.service.ts  phase.service.ts  scrcpy.service.spec.ts  scrcpy.service.ts  settings.service.ts
src/app/device/: device.component.css  device.component.html  device.component.ts
src/app/device/phase/: phase.component.html  phase.component.spec.ts  phase.component.ts
src/app/settings/: settings.component.html  settings.component.ts
src/domain/: device-settings.model.ts  device.model.ts  phase.model.ts  position.model.ts  zbberror.model.ts
window_manager/: Cargo.toml
window_manager/src/: lib.rs  linux.rs  macos.rs  windows.rs
