[package]
name = "zbbvrui"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "os-all", "shell-execute", "shell-open"] }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
adb_client = { git = "https://github.com/vmillet-dev/adb_client.git"}
log = "0.4.21"
async-std = "1.12.0"
window_manager = { path = "../window_manager"}
network-interface = "2.0.0"
which = "6.0.1"
system_shutdown = "4.0.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
