[package]
name = "window_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
x11 = "2.18.0"

[target.'cfg(macos)'.dependencies]
core-graphics = "0.23.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52.0", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }